# Coin-Quest-OpenGL-Game

./: .gitignore  CMakeLists.txt  README.md  instructions.md
assets/models/: coin.mtl  monkey.mtl
assets/shaders/: checkerboard.frag  color-mixer.frag  light.frag  light.vert  light_phong.glsl  light_repeated.vert  light_spectrum.frag  test.frag  texture-test.frag  textured.frag  textured.vert  tinted.frag  tinted.vert  transform-test.vert  triangle.vert
assets/shaders/postprocess/: chromatic-aberration.frag  fog.frag  hit.frag  motion-blur.frag  vignette.frag
config/: app.jsonc
source/: main.cpp
source/common/: application.cpp  application.hpp
source/common/components/: camera.cpp  coin.cpp  coin.hpp  collision.cpp  collision.hpp  component-deserializer.hpp  free-camera-controller.cpp  generated.hpp  heart.hpp  light.cpp  light.hpp  light_spectrum.cpp  light_spectrum.hpp  mesh-renderer.cpp  movement.cpp  movement.hpp  obstacle.hpp  player-movement-controller.cpp  player-movement-controller.hpp  player.hpp  postprocess.hpp  score-digit.cpp  score-digit.hpp
source/common/components/tags/: blur-post-process.hpp  coin.hpp  generated.hpp  heart.hpp  obstacle.hpp  powerup.hpp  warn-post-process.hpp
source/common/ecs/: component.hpp  entity.cpp  entity.hpp  tag-component.hpp  transform.cpp  world.cpp  world.hpp
source/common/material/: material.cpp  material.hpp  pipeline-state.hpp
source/common/mesh/: mesh.hpp
source/common/shader/: shader.cpp  shader.hpp
source/common/systems/: coin-generator.hpp  collision.hpp  forward-renderer.cpp  forward-renderer.hpp  free-camera-controller.hpp  gems-generator.hpp  generator.hpp  hud.hpp  movement.hpp  obstacle.hpp  player-movement-controller.hpp  score-system.hpp  score.hpp
source/common/texture/: sampler.hpp  texture-utils.cpp  texture2d.hpp
source/states/: entity-test-state.hpp  menu-state.hpp  play-state.hpp  renderer-test-state.hpp  sampler-test-state.hpp  shader-test-state.hpp
